# chebFractals

./: .clang-format  .gitignore  2DSPH_v2.sln  2DSPH_v2.vcxproj  2DSPH_v2.vcxproj.filters  CMakeLists.txt  LICENSE  README.md  Source.cpp  config.h.in  imgui.ini  offline.cpp  omniSPH.7z  test.cpp  test.h  viewer.cpp
cfg/: Untitled-1.psd  configs.sph  paths.cfg  style.css
cheb/: Domain.cpp  Domain.h  Function.cpp  Function.h  Interval.cpp  Interval.h  IntervalFunction.cpp  IntervalFunction.h  algorithms.cpp  algorithms.h  cheb.h  constants.h  sturm.cpp  sturm.h  utilities.cpp  utilities.h  vectorutil.cpp  vectorutil.h
cmake/: FindBlosc.cmake  FindGVDB.cmake  FindIlmBase.cmake  FindOpenVDB.cmake  FindUtils.cmake  Helpers.cmake  OpenVDBUtils.cmake  check_cuda.cu
fsVis/: optimizers.cpp  optimizers.h  renderer.cpp  utility.cpp  utility.h
gui/: OSD.cpp  glui.cpp  glui.h  imgui.ini  initFunctions.cpp  interaction.cpp  rayWindow.cpp  rendering.cpp  timeWindow.cpp
imgui/: implot.cpp  implot.h  implot_internal.h  implot_items.cpp
simulation/: 2DMath.h  SPH.cpp  SPH.h  SPHRender.h  config.h  imgui.ini  simulationRender.cpp  tinycolormap.h  utility.cpp
tools/: ParameterManager.cpp  ParameterManager.h  color.cpp  color.h  exceptionHandling.cpp  exceptionHandling.h  par_msquares.h  timer.cpp  timer.h
